--- a/index.html
+++ b/index.html
@@ -4,25 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Code Quiz</title>
   </head>
   <body>
       <main>
-        <button class="scores">View Score</button>
+        <button class="scores">View Highscores</button>
         <span class = "timeLeft"></span>
-        <div class ="displayPage"></div>
-   
-  <!--      <div>
-          <h2 class = "quiz"></h2>
-          <div class = "options">
-            <button class="choice1"> </button>
-            <button class="choice2"> </button>
-            <button class="choice3"> </button>
-            <button class="choice4"> </button>
-          </div>
-        </div>-->
-        
+        <div class ="displayPage"></div> 
       </main>
       <script src="./assets/js/script.js"></script>
   </body>
