Edited ReadMe file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
       <main>
         <button class="scores">View Highscores</button>
-        <span class = "timeLeft"></span>
+        <div class = "timeLeft"></div>
         <div class ="displayPage"></div> 
       </main>
       <script src="./assets/js/script.js"></script>
